istio/zen-gateway-passthrough.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: zen-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8443
      name: https
      protocol: HTTPS
    hosts:
    - zen-gw.apps.ocp4732.cp.fyre.ibm.com
    tls:
      mode: PASSTHROUGH  # path based routing happens at nginx
      credentialName: ocp4732
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: zen-route
spec:
  hosts:
  - zen-gw.apps.ocp4732.cp.fyre.ibm.com
  gateways:
  - zen-gateway
  tls:
  - match:
    - sniHosts:
      - zen-gw.apps.ocp4732.cp.fyre.ibm.com
      port: 8443
    route:
    - destination:
        host: ibm-nginx-svc
        port:
          number: 443
